Resolves tdf#137189 - Fixes crash at CheckInstalledExtensions()

SolarMutex added

Change-Id: I18c6683e7a26892ce7f1d019cb1ee59ce03981ac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104198
Reviewed-by: Muhammet Kara <muhammet.kara@collabora.com>
Tested-by: Jenkins